--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
@@ -94,7 +94,7 @@
                                     <label>Scheme Type - Secured</label>
                                 </div>
                                 <div class="col form-label justify-content-center">
-                                    <label>Preocessing Charges - 500</label>
+                                    <label>Processing Charges - 500</label>
                                 </div>
                                 <div class="col form-label justify-content-center">
                                     <label>Maximum % Allowed - 67%</label>
