Changes in new customer

--- a/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <form [formGroup]="checkoutCustomerForm">
-            <div class="row py-3">
+            <div class="row py-3" *ngIf="!showformFlag">
                 <div class="col-6 pr-4">
                     <div class="row">
                         <div class="col-4 align-self-center">
