--- a/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.scss
@@ -1,6 +1,6 @@
 :host {
     .checkout-height {
-        min-height: 70vh;
-        max-height: 72vh;
+        min-height: 80vh;
+        // max-height: 72vh;
     }
 }
